# dioxus-whale-windows

./: Cargo.toml  Dioxus.toml  input.css  package-lock.json
assets/: tailwind.css
src/: main.rs
