[package]
name = "rust-windows-dioxus"
version = "0.1.0"
authors = ["MooKorea <69235304+MooKorea@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
tokio = { version = "1.4" }

[dependencies.windows]
version = "0.60.0"
features = [
    "Win32",
    "Win32_Media",
    "Win32_Media_Audio",
    "Media",
    "Media_Devices",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Media_Audio_Endpoints"
]

[dependencies.windows-core]
version = "0.60"


[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
bundle = []

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
